fix overflow on server desc

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,6 +148,7 @@ html, body
 	border-top-right-radius:0px;
 	color:black;
 	padding:12px;
+	overflow:auto;
 }
 
 .serverInfo
